# de-gspread-automation-and-ai-sentiment-analysis-fesomadealli

./: .gitignore  README.md  logger.py  main.py  pyproject.toml
src/: analysis.py  config.py  etl.py  utils.py
