[project]
name = "automated-review-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "fesomadealli",email = "fesomade.alli@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "groq (>=0.36.0,<0.37.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
